package Mealplan;

import java.util.List;

public class Recipe {
    private String title;
    private String description;
    private int prepTime;
    private int cookTime;
    private IngredientList ingredients;
    List<String> method;

    public Recipe(String title){

    }
    public void addIngredients(){

    }

    public void addMethod(){

    }


}
